classDiagram

    class AbstractInterface~ResourceRead, ResourceQuery, ResourceCreate, ResourceUpdate~ {
        <<Interface>>
        ... Find(...)
        ... Create(...)
        ... Read(...)
        ResourceRead Update(string id, ResourceUpdate data)
        ... Delete(...)
    }

    class UsersInterface {
        <<Interface>>
    }

    class IssuesInterface {
        <<Interface>>
    }

    class CommentsInterface {
        <<Interface>>
    }

    AbstractInterface <|-- UsersInterface
    AbstractInterface <|-- IssuesInterface
    AbstractInterface <|-- CommentsInterface

    style AbstractInterface fill:yellow